Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Digits.out
Digits.java:11:43: compiler.err.illegal.nonascii.digit
1 error
